syntax = "proto3";
package nbrpc;

import "Types.proto";
import "Math.proto";
  
service ShaderStub
{
	rpc BuildShader (BuildShaderRequest) returns (BuildShaderReply) {}
	rpc UniformBool (UniformBoolRequest) returns (NoneReply) {}
	rpc UniformFloat (UniformFloatRequest) returns (NoneReply) {}
	rpc UniformInteger (UniformIntegerRequest) returns (NoneReply) {}
	rpc UniformVec2 (UniformVec2Request) returns (NoneReply) {}
	rpc UniformVec3 (UniformVec3Request) returns (NoneReply) {}
	rpc UniformVec4 (UniformVec4Request) returns (NoneReply) {}
	rpc UniformMat3x3 (UniformMat3x3Request) returns (NoneReply) {}
	rpc UniformMat4x4 (UniformMat4x4Request) returns (NoneReply) {}
}

message BuildShaderRequest 
{
	string vShaderCode = 1;
	string fShaderCode = 2;
}
message BuildShaderReply 
{
	map<string, UniformType> uniformInfos = 1;
}

message UniformBoolRequest
{
	string name = 1;
	bool value = 2;
}
message UniformFloatRequest
{
	string name = 1;
	float value = 2;
}
message UniformIntegerRequest
{
	string name = 1;
	int32 value = 2;
}
message UniformVec2Request
{
	string name = 1;
	Vec2 value = 2;
}
message UniformVec3Request
{
	string name = 1;
	Vec3 value = 2;
}
message UniformVec4Request
{
	string name = 1;
	Vec4 value = 2;
}
message UniformMat3x3Request
{
	string name = 1;
	Mat3x3 value = 2;
}
message UniformMat4x4Request
{
	string name = 1;
	Mat4x4 value = 2;
}
message NoneReply
{
}